k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <deploy_name>
  namespace: <namespace>
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: <deploy_name>
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: <deploy_name>
    spec:
      containers:
        - env:

            - name: PORT
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: PORT
            - name: POSTGRES_PORT
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: POSTGRES_PORT
            - name: POSTGRES_HOST
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: POSTGRES_HOST
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: POSTGRES_DB
            - name: EXCHANGE_RATE_BASE_URL
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: EXCHANGE_RATE_BASE_URL
            - name: EXCHANGE_RATE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: EXCHANGE_RATE_API_KEY
            - name: COINGATE_BASE_URL
              valueFrom:
                secretKeyRef:
                  name: appSecret
                  key: COINGATE_BASE_URL

          image: <image_url>:<image_tag>
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 3
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: <deploy_name>
          ports:
            - containerPort: 80
              name: http-port
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 600m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 512Mi
          startupProbe:
            failureThreshold: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: repo-xaniis-local
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
