k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 1024k
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: <deploy_name>
  namespace: <namespace>
spec:
  tls:
  - hosts:
    - <deploy_url>
    secretName: <deploy_url>-tls
  rules:
  - host: <deploy_url>
    http:
      paths:
      - backend:
          service: 
            name: <deploy_name>
            port: 
              number: 80
        path: /()(.*)
        pathType: Prefix
